static/css/base.css
html, body {
    cursor: url(../images/cursor_hawk_black.png), auto;
}

h1 a {
    color: #000000;
    font-family: 'Lobster';
}

main {
	margin-left: 40px;
    margin-right: 40px;
    min-height: calc(100vh - 162px);
    margin-bottom: 20px;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
      -webkit-user-select: none; /* Safari */
       -khtml-user-select: none; /* Konqueror HTML */
         -moz-user-select: none; /* Firefox */
          -ms-user-select: none; /* Internet Explorer/Edge */
              user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}

.boop-message {
    position: fixed;
    left: 0;
    right: 0;
    margin: auto;
    width: 800px;
    top: 100px;
    font-size: 300px;
    background-color: rgba(209, 209, 224, 0.8);
    text-align: center;
    padding: 20px 20px 20px 20px;
    font-family: 'Lobster'
}

@media screen and (max-width: 800px) {
    .boop-message {
        position: fixed;
        left: 0;
        right: 0;
        margin: auto;
        width: 100%;
        top: 100px;
        font-size: 600%;
        background-color: rgba(209, 209, 224, 0.8);
        text-align: center;
        padding: 40px 20px 40px 20px;
        font-family: 'Lobster'
    }
}

.video-caption {
    margin-top: 10px;
    margin-left: 30px;
    font-size: 20px;
    font-family: 'Lobster';
}

/*Header stuff */
.navbar {
    border-radius: 0px;
    background-color: black;
    height: 4em;
    cursor: url(../images/cursor_hawk_yellow.png), auto;
}

.navbar-inverse .navbar-header .navbar-brand {
    font-family: 'Lobster';
    font-size: 2.2em;
    color: #FFE800;
}

#main-navbar .navbar-btn {
    border-color: #A09D9E;
    color: #A09D9E;
}

/* Main stuff */
h1, h2, h3, h4 {
    font-family: 'Lobster', cursive;
}

.post h1 a, .post h1 a:visited {
    color: #000000;
}

.pager li a {
    color: white;
    background-color: black;
}

.pager li a:hover, .pager li a:active, .btn-default:hover, .btn-default:active, .pressed, #main-navbar .navbar-btn:hover {
    color: black;
    background-color: #FFE800;
}

.btn-default, .pressed:hover, .pressed:active {
    color: white;
    background-color: black;
}

.comment-section {
    margin: 10px 0 30px 15px;
}

.combined-comment-section, hr {
    margin-left: -15px;
}

@media screen and (max-width: 766px) {
    .combined-comment-section .form-group button {
        margin-left: 15px;
        margin-top: 5px;
    }
}

.post-image {
    max-height: 500px;
    margin: 20px 20px 20px 0;
}

@media screen and (min-width: 560px) {
    .post-image {
        max-width: 560px;
    }

    .youtube-video {
        width: 560px;
    }
}

.post-body {
    margin-bottom: 20px;
}

.published-edited-dates {
    color: #A09D9E;
}

#boop-unboop-buttons {
    float: right;
}

#edit-delete-buttons {
    float: left;
    margin-left: -15px;
}

@media screen and (max-width: 418px) {
    #boop-unboop-buttons {
        float: left;
        margin-left: -15px;
    }
}

.user-view a {
    color: black;
    line-height: 2em;
}

#leaderboard {
    background-color: #FFE800;
    color: black;
    padding:1px 10px 15px 20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#leaderboard h1 {
    word-wrap: break-word;
}

img {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

canvas {
    background: rgb(227, 254, 255);
    display: block;
    margin: 0 auto;
    margin-top: 30px;
    cursor: none;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    margin-bottom: 50px;
}

/* Footer Stuff */
footer {
    background-color: #FFE800;
    width: 100%;
    margin-top: 0;
    padding: 20px 20px 20px 40px;
}

footer p {
    margin-left: 40px;
    color: black;
}

